syntax = "proto3";
package vmr_proto;

option go_package = "git.supremind.info/product/visionmind/proto/go/api";

enum PTZCmdType {
    PTZ_CMD_STOP    = 0;
    PTZ_CMD_RIGHT   = 1;
    PTZ_CMD_LEFT    = 2;
    PTZ_CMD_UP      = 3;
    PTZ_CMD_DOWN    = 4;

    PTZ_CMD_LEFT_UP     = 5;
    PTZ_CMD_LEFT_DOWN   = 6;
    PTZ_CMD_RIGHT_UP    = 7;
    PTZ_CMD_RIGHT_DOWN  = 8;

    PTZ_CMD_ZOOM_IN     = 9;
    PTZ_CMD_ZOOM_OUT    = 10;
};

enum PresetCmdType {
    PRESET_CMD_SET  = 0;
    PRESET_CMD_GOTO = 1;
    PRESET_CMD_DEL  = 2;
};

message PTZ {
    uint32 pan  = 1; 
    uint32 tilt = 2;
    uint32 zoom = 3; 
}

message Rect {
    int32 xTop       = 1;
    int32 yTop       = 2;
    int32 xBottom    = 3;
    int32 yBottom    = 4;
}

message PresetInfo {
    string name   = 1; 
    uint32 number = 2; 
    PTZ    pos    = 3;
}

message GetPresetRequest
{
    string      device_id   = 1;
}

message GetPresetResponse
{
    repeated PresetInfo preset_info = 1;
}

message SetPresetRequest
{
    string        device_id         = 1;
    PresetCmdType preset_cmd_type   = 2;
    uint32        index             = 3;  //ptz preset index,[1,255],0 reserved
}

message PTZControlRequest
{
    string      device_id       = 1;
    PTZCmdType  ptz_cmd_type    = 2;
    uint32      speed           = 3;  //ptz control speed, [0,9]
}

message GetPTZPositionRequest
{
    string      device_id       = 1;
}

message GetPTZPositionResponse
{
    PTZ      ptz_position       = 1;
}
